--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,6 +13,6 @@
       <h1>Welcome to page 2</h1>
       <ul class="gallery"></ul>
     </section>
-    <script src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
